[package]
name = "geoip"
version = "1.0.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[dependencies]
reqwest = "0.13.4"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
tokio = { version = "1.53.1", features = ["full"] }
